RESOLVED FIXED26218
REGRESSION (r44385): LayoutTests/fast/dom/Window/orphaned-frame-access.html fails on Debug builds
https://bugs.webkit.org/show_bug.cgi?id=26218
Summary REGRESSION (r44385): LayoutTests/fast/dom/Window/orphaned-frame-access.html f...
David Kilzer (:ddkilzer)
Reported 2009-06-05 09:30:47 PDT
* SUMMARY LayoutTests/fast/dom/Window/orphaned-frame-access.html fails on the Leopard buildbot: http://build.webkit.org/builders/Leopard%20Intel%20Debug%20%28Tests%29/builds/1769 and when run under guard malloc. * STEPS TO REPRODUCE $ ./WebKitTools/Scripts/build-webkit --debug $ ./WebKitTools/Scripts/run-webkit-tests --debug -g fast/dom/Window * RESULTS Test fails thusly: -property: PASS ... array: PASS ... missing property: PASS. +property: PASS ... array: PASS ... [object CommentConstructor] * REGRESSION This seems to be a recent regression.
Attachments
When checking for main resource loading make sure that loader's frame is the main one. (3.04 KB, patch)
2009-06-09 06:33 PDT, Yury Semikhatsky
timothy: review+
David Kilzer (:ddkilzer)
Comment 1 2009-06-05 09:37:18 PDT
Actually, this doesn't require running under guard malloc to reproduce, just a Debug build: $ ./WebKitTools/Scripts/run-webkit-tests --debug fast/dom/Window/orphaned-frame-access.html
David Kilzer (:ddkilzer)
Comment 2 2009-06-07 06:14:18 PDT
An internal build bisect reveals: Works: r44383 Fails: r44388
David Kilzer (:ddkilzer)
Comment 3 2009-06-07 06:58:53 PDT
(In reply to comment #2) > An internal build bisect reveals: > > Works: r44383 Fails: r44388 However improbable this seems, a git-bisect reveals that this broke with a Debug build of r44385. <http://trac.webkit.org/changeset/44385>
David Kilzer (:ddkilzer)
Comment 4 2009-06-07 07:06:36 PDT
(In reply to comment #3) > (In reply to comment #2) > > An internal build bisect reveals: > > > > Works: r44383 Fails: r44388 > > However improbable this seems, a git-bisect reveals that this broke with a > Debug build of r44385. > > <http://trac.webkit.org/changeset/44385> Note that I had to apply the build fix in r44388 to both r44384 and r44385 to test this. <http://trac.webkit.org/changeset/44388>
Pavel Feldman
Comment 5 2009-06-09 06:25:14 PDT
I confirm that 44385 is breaking the test, Yury has a fix on its way.
Yury Semikhatsky
Comment 6 2009-06-09 06:33:33 PDT
Created attachment 31090 [details] When checking for main resource loading make sure that loader's frame is the main one.
mitz
Comment 7 2009-06-09 10:48:02 PDT
Comment on attachment 31090 [details] When checking for main resource loading make sure that loader's frame is the main one. > +bool InspectorController::isMainResourceLoader(DocumentLoader* loader, const KURL& requestUrl) { > + return loader->frame() == m_inspectedPage->mainFrame() && requestUrl == loader->requestURL(); > +} The opening brace at the beginning of a function definition should go on a separate line.
Brent Fulgham
Comment 8 2009-06-09 17:26:14 PDT
Landed in @r44549.
David Kilzer (:ddkilzer)
Comment 9 2009-06-09 21:41:22 PDT
David Kilzer (:ddkilzer)
Comment 10 2009-06-09 21:41:40 PDT
Alexey Proskuryakov
Comment 11 2009-06-15 01:52:12 PDT
+bool InspectorController::isMainResourceLoader(DocumentLoader* loader, const KURL& requestUrl) +{ + return loader->frame() == m_inspectedPage->mainFrame() && requestUrl == loader->requestURL(); +} This looks like a bad misnomer to me. Our MainResourceLoader class is used for any frame's main resource, so the words "main resource" are not appropriate here. Could you please make a patch to fix this (in a new bug)?
Note You need to log in before you can comment on or make changes to this bug.