2009-06-09  Yury Semikhatsky  <yurys@chromium.org>

Reviewed by Timothy Hatcher.

        When checking if the loader is the main resource loader make sure that the loader's frame is the main frame.

        https://bugs.webkit.org/show_bug.cgi?id=26218

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::didLoadResourceFromMemoryCache):
        (WebCore::InspectorController::identifierForInitialRequest):
        (WebCore::InspectorController::isMainResourceLoader):
        * inspector/InspectorController.h:



Canonical link: https://commits.webkit.org/36374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@44549 268f45cc-cd09-0410-ab3c-d52691b4dbfc